<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="weight_of_package">Weight of Package</string>
    <string name="ounces">In Ounces</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="base_cost_label">Base Cost</string>
    <string name="added_cost_label">Added Cost</string>
    <string name="total_cost_label">Total Cost</string>
    <string name="base_cost_text">$0.00</string>
    <string name="added_cost_text">$0.00</string>
    <string name="total_cost_text">$0.00</string>
</resources>
